# agent-architectures

./: .env.example  LICENSE  README-ja.md  README.md  pyproject.toml  sns-draft.md
src/agent_architectures/: __init__.py  cli.py  config.py  fixtures.py  pricing.py  web.py
src/agent_architectures/adapters/: __init__.py
src/agent_architectures/adapters/llm/: __init__.py  openai_chat.py
src/agent_architectures/adapters/observability/: __init__.py  collecting_trace.py  console_trace.py  in_memory_metrics.py
src/agent_architectures/adapters/orchestration/: __init__.py  openai_agents_sdk.py
src/agent_architectures/adapters/tools/: __init__.py  mock_search.py
src/agent_architectures/application/: __init__.py  orchestrate_workers.py  single_agent_loop.py  triage_and_handoff.py
src/agent_architectures/application/ports/: __init__.py  llm.py  observability.py  orchestration.py  tool.py
src/agent_architectures/domain/: __init__.py  agent.py  context_window.py  summary.py  task.py
src/agent_architectures/static/: index.html
tests/: test_core.py  test_handoff.py  test_orchestrator.py  test_single_loop.py  test_web.py
