[project]
name = "agent-architectures"
version = "0.1.0"
description = "Three agent architectures running the same tasks"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.26,<3",
  "openai-agents>=0.13,<0.14",
  "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = ["pytest>=9,<10", "pytest-asyncio>=1.3,<2"]
ui = ["starlette>=1.3,<2", "uvicorn>=0.34,<1"]

[project.scripts]
agentflow = "agent_architectures.cli:main"
agentflow-ui = "agent_architectures.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

